# voice-engine-swift

./: .gitignore  .no-mistakes.yaml  AGENTS.md  BRIEF.md  CLAUDE.md  Info.plist  Makefile  Package.swift  README.md  VoiceEngine.entitlements  bench.py  bench_all.sh  bench_full.py  bench_libri.py  benchmark.sh  build.sh  check_libri.py  chunk_transcribe.py  debug_libri.py  diagnose.sh  export_dataset.py  fetch_librispeech.py  fix_bench.py  fix_bench_for_inputs.py  gen_wav.py  karabiner-voice-engine.json  list_libri.py  restore_chunk.py  revert_bench.py  run_chunk.sh  run_restore.sh  run_tweak.sh  treehouse.toml  tweak_chunk.py  update_chunker.py  voice.entitlements  voice.py  write_infer.sh
.build/: build.db  debug.yaml  release.yaml
.jw/: dead-code-review-2026-07-06.md
Config/: fullstop-manifest.json
Scripts/: build_corpus.py  build_external_corpus.py  compare_hf_vs_coreml.py  compare_multistep.py  compare_replica_vs_coreml.py  diagnose_decoder.py  export_base.py  export_cross_kv.py  export_decoder.py  export_decoder_final.py  export_decoder_fp32.py  export_decoder_gpu.py  export_decoder_v2.py  export_decoder_v3.py  export_fullstop.py  export_models.py  find_bug.py  (+18 more)
Sources/VoiceEngine/ParakeetMLX/: CMakeLists.txt  audio_preprocess.cpp  bisector.cpp  conformer_encoder.cpp  decoder_test.cpp  encoder_test.cpp  parakeet_cli.cpp  parakeet_engine.cpp  tdt_decoder.cpp  tokenizer.cpp  weight_loader.cpp
Sources/VoiceEngine/ParakeetMLX/include/: audio_preprocess.h  conformer_encoder.h  parakeet_engine.h  parakeet_model.h  tdt_decoder.h  tokenizer.h  weight_loader.h
(+899 files in other folders)
